[tool.poetry]
name = "microservico-py"
version = "0.1.0"
description = ""
authors = ["Victor Nascimento <augusto.van@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Werkzeug = "0.16.0"
flask-restplus = "^0.13.0"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
